Personopplysning - flytt bruk av vurderingsdato til der det trengs